--- a/UniXperience/nbproject/private/private.properties
+++ b/UniXperience/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/HP/Library/Application Support/NetBeans/16/build.properties
+user.properties.file=C:\\Users\\RIYA\\AppData\\Roaming\\NetBeans\\16\\build.properties
